[package]
name = "guple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
maud = { version = "0.23.0", features = ["tide"] }
include-repo = "1.0.0"
